--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,34 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.theme-change-label{
+  font-size: 29px;
+  text-transform: capitalize;
+  font-weight: 800;
+}
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+}
+
+.dark-theme {
+  background-color: #282c34;
   color: white;
+}
+.dark-theme .nav-link {
+  color: white
+}
+.light-theme {
+  background-color: whitesmoke;
+  color: black;
+}
+
+.light-theme .nav-link {
+  color: black
 }
 
 .App-link {
@@ -35,4 +53,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.pageChecker{
+    color: red;
 }
